--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 							</ul>
 						</div>
 						<div class="image-container">
-							<img src="images/Queen.jpg" alt="The Queen of my Heart 👑" />
+							<img src="images/Us15.jpg" alt="The Queen of my Heart 👑" />
 							<div id="banner-caption" class="caption">
-								<h3>The Queen of my Heart 👑</h3>
+								<h3>Stiiiiick to meeeeee 🍬 </h3>
 							</div>
 						</div>
 					</section>
@@ -91,7 +91,15 @@
 										<p>OH WOW!! 😍😍😍 Is it hot in here? Ah, no it's just you 😘😍 </p>
 									</div>
 								</article>
-							
+								<article>
+									<a href="images/gallery/fulls/07.jpg" class="image">
+										<img src="images/Us16.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Are we cute af?</h3>
+										<p>The answer is yes, yes we are</p>
+									</div>
+								</article>
 								<article>
 									<a href="images/gallery/fulls/05.jpg" class="image">
 										<img src="images/Her1.jpg" alt="" />
@@ -108,6 +116,15 @@
 									<div class="caption">
 										<h3>The prrretiest and her mug 2.0</h3>
 										<p>Yes, even with your facemask, I still think you are gorgeous. And that hairstyle suits you very well!</p>
+									</div>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/02.jpg" class="image">
+										<img src="images/Her22.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>With kotik</h3>
+										<p>But a different kotik :P And that gown and that smile, oh my 😍   </p>
 									</div>
 								</article>
 								<article>
@@ -174,6 +191,15 @@
 									</div>
 								</article>
 								<article>
+									<a href="images/gallery/fulls/02.jpg" class="image">
+										<img src="images/Us14.jpg" alt=""/>
+									</a>
+									<div class="caption">
+										<h3>At the shisha bar</h3>
+										<p>The tea wasn't as good as you expected, but it was really nice anyways 😊 And your hair looks simply *chef's kiss*   </p>
+									</div>
+								</article>
+								<article>
 									<a href="images/gallery/fulls/07.jpg" class="image">
 										<img src="images/Her17.jpg" alt="" />
 									</a>
@@ -207,6 +233,15 @@
 									<div class="caption">
 										<h3>Bags are for pussies</h3>
 										<p>A statement by Nika, 29.04.2025 :D</p>
+									</div>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/02.jpg" class="image">
+										<img src="images/Us13.jpg" />
+									</a>
+									<div class="caption">
+										<h3>Bubble tea!</h3>
+										<p>It was soooo yummy! You know what else is yummy? Wink wink  </p>
 									</div>
 								</article>
 								<article>
@@ -252,6 +287,15 @@
 									<div class="caption">
 										<h3>Teethses</h3>
 										<p>Your teethses are pretty. And even gold can be found there :P Sorry, just kidding.</p>
+									</div>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/02.jpg" class="image">
+										<img src="images/her21.jpg" />
+									</a>
+									<div class="caption">
+										<h3>Someone is happy </h3>
+										<p>Nothing like a few orga...nizations to improve the mood 🤭  </p>
 									</div>
 								</article>
 								<article>
@@ -472,7 +516,8 @@
 <section id="poem-of-the-month" class="section">
 	<h2>Poem of the Month</h2>
 	<div class="month-selector">
-			<button onclick="showPoem('poem-july-2025')">July 2025</button>
+		<button onclick="showPoem('poem-august-2025')">August 2025</button>
+	    <button onclick="showPoem('poem-july-2025')">July 2025</button>
 		<button onclick="showPoem('poem-june-2025')">June 2025</button>
 	    <button onclick="showPoem('poem-may-2025')">May 2025</button>
 		<button onclick="showPoem('poem-april-2025')">April 2025</button>
@@ -618,6 +663,30 @@
 		<p class="poem-author">"Sunshine" - By Pat Parker</p>
 		<img src="images/Poem5.jpg" class="poem-image">
 	  </div>
+
+	  <div class="poem-card" id="poem-august-2025">
+		<h3>August 2025</h3>
+		<p class="poem-content">
+			I don’t love you as if you were a rose of salt, topaz,<br>   
+			or arrow of carnations that propagate fire:<br>   
+			I love you as one loves certain obscure things,<br>   
+			secretly, between the shadow and the soul.<br>
+			<br>
+			I love you as the plant that doesn’t bloom but carries<br>   
+			the light of those flowers, hidden, within itself,<br>   
+			and thanks to your love the tight aroma that arose<br>   
+			from the earth lives dimly in my body.<br>
+            <br>
+			I love you without knowing how, or when, or from where,<br>   
+			I love you directly without problems or pride:<br>
+			I love you like this because I don’t know any other way to love,<br>
+			except in this form in which I am not nor are you,<br>   
+			so close that your hand upon my chest is mine,<br>   
+			so close that your eyes close with my dreams.<br>
+		</p>
+		<p class="poem-author">"Sonnet: XVII" - By Pablo Neruda</p>
+		<img src="images/Poem6.jpg" class="poem-image">
+	  </div>
   
 
   </section>
@@ -713,7 +782,8 @@
 										<div class="popup-content">
 											<span class="close-btn" onclick="closePopup()">&times;</span>
 											<h2>Lapochka 💜</h2>
-											<p>Enjoy Baku! I'll meet you there 💖 And even though we'll be apart, and I'll miss you a lot, my love for you will only grow stronger</p>
+											<p>Enjoy the rest of your vacation! 💖 It was great to share Baku with you, and I'm looking forward to our next vacation. I miss you and I love you 💜💜</p>
+											 <img src="images\Us17.jpg" alt="Sweet moment" class="popup-image">
 										</div>
 									</div>
 											<hr />
@@ -916,7 +986,7 @@ function togglePlaces() {
 	<script>
 		document.addEventListener("DOMContentLoaded", function () {
 		  setTimeout(function () {
-			alert("Lapochka, did you remember to take care of yourself today? If you haven't, please do. I love you, very very much!  💜💕");
+			alert("Lapochka, please remember to rest and do at least one nice thing for yourself! I love you, very very much!  💜💕");
 		  }, 35000);
 		});
 	  </script>
