--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 								</article>
 								<article>
 									<a href="images/gallery/fulls/02.jpg" class="image">
-										<img src="images/her21.jpg" />
+										<img src="images/Her21.jpg" />
 									</a>
 									<div class="caption">
 										<h3>Someone is happy </h3>
