--- a/index.html
+++ b/index.html
@@ -290,12 +290,12 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" class="image">
-										<img src="images/Her21.jpg" />
+									<a href="images/gallery/fulls/09.jpg" class="image">
+										<img src="images/Her21.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Someone is happy </h3>
-										<p>Nothing like a few orga...nizations to improve the mood 🤭  </p>
+										<h3>Someone is happy</h3>
+										<p>Nothing like a few orga...nizations to improve the mood 🤭</p>
 									</div>
 								</article>
 								<article>
