--- a/index.html
+++ b/index.html
@@ -56,12 +56,30 @@
 									</div>
 								</article>
 								<article>
+									<a href="images/gallery/fulls/01.jpg" class="image">
+										<img src="images/Her26.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Shooping bag fashion</h3>
+										<p>Besides being the sexiest, the bag is quite good :P</p>
+									</div>
+								</article>
+								<article>
 									<a href="images/gallery/fulls/02.jpg" class="image">
 										<img src="images/Us2.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>At your place</h3>
 										<p>I think this is my favorite picture of us (Many more to be taken!)</p>
+									</div>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/09.jpg" class="image">
+										<img src="images/Us20.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Smiiiiiiiile</h3>
+										<p>Happy selfie time </p>
 									</div>
 								</article>
 								<article>
@@ -128,6 +146,15 @@
 									</div>
 								</article>
 								<article>
+									<a href="images/gallery/fulls/09.jpg" class="image">
+										<img src="images/Us18.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>At the tram</h3>
+										<p>I'll be your seat anytime *wink wink* </p>
+									</div>
+								</article>
+								<article>
 									<a href="images/gallery/fulls/06.jpg" class="image">
 										<img src="images/Us6.jpg" alt="" />
 									</a>
@@ -182,6 +209,15 @@
 									</div>
 								</article>
 								<article>
+									<a href="images/gallery/fulls/09.jpg" class="image">
+										<img src="images/Her25.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Lego time</h3>
+										<p>I'm glad to support any and all of your hobbies 🥰 </p>
+									</div>
+								</article>
+								<article>
 									<a href="images/gallery/fulls/08.jpg" class="image">
 										<img src="images/us9.jpg" alt="" />
 									</a>
@@ -233,6 +269,15 @@
 									<div class="caption">
 										<h3>Bags are for pussies</h3>
 										<p>A statement by Nika, 29.04.2025 :D</p>
+									</div>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/09.jpg" class="image">
+										<img src="images/Her24.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Starbucks date</h3>
+										<p>It wasn't strawberry, it was acai! </p>
 									</div>
 								</article>
 								<article>
@@ -296,6 +341,15 @@
 									<div class="caption">
 										<h3>Someone is happy</h3>
 										<p>Nothing like a few orga...nizations to improve the mood 🤭</p>
+									</div>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/09.jpg" class="image">
+										<img src="images/Her23.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Shopping with lapochka</h3>
+										<p>Selecting chips is a serious business</p>
 									</div>
 								</article>
 								<article>
@@ -516,6 +570,7 @@
 <section id="poem-of-the-month" class="section">
 	<h2>Poem of the Month</h2>
 	<div class="month-selector">
+		<button onclick="showPoem('poem-september-2025')">September 2025</button>
 		<button onclick="showPoem('poem-august-2025')">August 2025</button>
 	    <button onclick="showPoem('poem-july-2025')">July 2025</button>
 		<button onclick="showPoem('poem-june-2025')">June 2025</button>
@@ -687,6 +742,29 @@
 		<p class="poem-author">"Sonnet: XVII" - By Pablo Neruda</p>
 		<img src="images/Poem6.jpg" class="poem-image">
 	  </div>
+
+	   <div class="poem-card" id="poem-september-2025">
+		<h3>September 2025</h3>
+		<p class="poem-content">
+			If ever two were one, then surely we.<br>
+			If ever man were loved by wife, then thee.<br>
+			If ever wife was happy in a man,<br>
+			<br>
+			Compare with me, ye women, if you can.<br>
+			I prize thy love more than whole mines of gold,<br>
+			Or all the riches that the East doth hold.<br>
+			<br>
+			My love is such that rivers cannot quench,<br>
+			Nor ought but love from thee give recompense.<br>
+			Thy love is such I can no way repay;<br>
+			The heavens reward thee manifold, I pray.<br>
+			<br>
+			Then while we live, in love let’s so persever,<br>
+			That when we live no more, we may live ever.<br>
+		</p>
+		<p class="poem-author">"To My Dear and Loving Husband" - By Anne Bradstreet </p>
+		<img src="images/Poem7.jpg" class="poem-image">
+	  </div>
   
 
   </section>
@@ -782,8 +860,8 @@
 										<div class="popup-content">
 											<span class="close-btn" onclick="closePopup()">&times;</span>
 											<h2>Lapochka 💜</h2>
-											<p>Enjoy the rest of your vacation! 💖 It was great to share Baku with you, and I'm looking forward to our next vacation. I miss you and I love you 💜💜</p>
-											 <img src="images\Us17.jpg" alt="Sweet moment" class="popup-image">
+											<p>I love you very very much, and I'm here to support you in anything and everything. We are a team, and we'll face anything that comes together 💜💜💜</p>
+											 <img src="images\Us19.jpg" alt="Sweet moment" class="popup-image">
 										</div>
 									</div>
 											<hr />
@@ -986,7 +1064,7 @@ function togglePlaces() {
 	<script>
 		document.addEventListener("DOMContentLoaded", function () {
 		  setTimeout(function () {
-			alert("Lapochka, please remember to rest and do at least one nice thing for yourself! I love you, very very much!  💜💕");
+			alert("I'm proud of you every day, no matter what you do or don't 💜 I love you lapochka! 💕");
 		  }, 35000);
 		});
 	  </script>
