--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="images/gallery/fulls/01.jpg" class="image">
+									<a href="images/Us1.jpg" class="image">
 										<img src="images/Us1.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -56,7 +56,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/01.jpg" class="image">
+									<a href="images/Her26.jpg" class="image">
 										<img src="images/Her26.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -65,7 +65,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" class="image">
+									<a href="images/Us2.jpg" class="image">
 										<img src="images/Us2.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -74,7 +74,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/09.jpg" class="image">
+									<a href="images/Us20.jpg" class="image">
 										<img src="images/Us20.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -83,16 +83,24 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/03.jpg" class="image">
+									<a href="images/Us3.jpg" class="image">
 										<img src="images/Us3.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Dinner with P&P</h3>
 										<p>The first (And probably only) time I guided us somewhere successfully</p>
 								</article>
-								
 								<article>
-									<a href="images/gallery/fulls/04.jpg" class="image">
+									<a href="images/Her29.jpg" class="image">
+										<img src="images/Her29.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Carrying that bed...</h3>
+										<p>And that beautiful ass</p>
+									</div>
+								</article>
+								<article>
+									<a href="images/Us5.jpg" class="image">
 										<img src="images/Us5.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -101,7 +109,7 @@
 									</div>
 								</article>
                                 <article>
-									<a href="images/gallery/fulls/04.jpg" class="image">
+									<a href="images/Her16.jpg" class="image">
 										<img src="images/Her16.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -110,7 +118,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/07.jpg" class="image">
+									<a href="images/Us16.jpg" class="image">
 										<img src="images/Us16.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -119,7 +127,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/05.jpg" class="image">
+									<a href="images/Her1.jpg" class="image">
 										<img src="images/Her1.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -128,7 +136,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/06.jpg" class="image">
+									<a href="images/Her2.jpg" class="image">
 										<img src="images/Her2.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -137,7 +145,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" class="image">
+									<a href="images/Her22.jpg" class="image">
 										<img src="images/Her22.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -146,7 +154,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/09.jpg" class="image">
+									<a href="images/Us18.jpg" class="image">
 										<img src="images/Us18.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -155,7 +163,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/06.jpg" class="image">
+									<a href="images/Us6.jpg" class="image">
 										<img src="images/Us6.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -164,7 +172,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/07.jpg" class="image">
+									<a href="images/Her3.jpg" class="image">
 										<img src="images/Her3.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -173,7 +181,16 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/08.jpg" class="image">
+									<a href="images/Her28.jpg" class="image">
+										<img src="images/Her28.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Sephora</h3>
+										<p>A wild sexikus in her natural habitat, graceful, gorgeous</p>
+									</div>
+								</article>
+								<article>
+									<a href="images/Her18.jpg" class="image">
 										<img src="images/Her18.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -182,7 +199,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/07.jpg" class="image">
+									<a href="images/Her13.jpg" class="image">
 										<img src="images/Her13.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -191,7 +208,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/08.jpg" class="image">
+									<a href="images/Her4.jpg" class="image">
 										<img src="images/Her4.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -200,7 +217,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/04.jpg" class="image">
+									<a href="images/Her20.jpg" class="image">
 										<img src="images/Her20.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -209,7 +226,16 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/09.jpg" class="image">
+									<a href="images/Us21.jpg" class="image">
+										<img src="images/Us21.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Another at the tram</h3>
+										<p>When we will stop being teenagers? Neva!</p>
+									</div>
+								</article>
+								<article>
+									<a href="images/Her25.jpg" class="image">
 										<img src="images/Her25.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -218,7 +244,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/08.jpg" class="image">
+									<a href="images/us9.jpg" class="image">
 										<img src="images/us9.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -227,7 +253,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" class="image">
+									<a href="images/Us14.jpg" class="image">
 										<img src="images/Us14.jpg" alt=""/>
 									</a>
 									<div class="caption">
@@ -236,7 +262,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/07.jpg" class="image">
+									<a href="images/Her17.jpg" class="image">
 										<img src="images/Her17.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -245,7 +271,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/04.jpg" class="image">
+									<a href="images/Us10.jpg" class="image">
 										<img src="images/Us10.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -254,7 +280,16 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/04.jpg" class="image">
+									<a href="images/Her27.jpg" class="image">
+										<img src="images/Her27.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Escalator</h3>
+										<p>Oh wow, hellooooo there sexy</p>
+									</div>
+								</article>
+								<article>
+									<a href="images/Us4.jpg" class="image">
 										<img src="images/Us4.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -263,7 +298,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/04.jpg" class="image">
+									<a href="images/Her14.jpg" class="image">
 										<img src="images/Her14.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -272,7 +307,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/09.jpg" class="image">
+									<a href="images/Her24.jpg" class="image">
 										<img src="images/Her24.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -281,7 +316,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" class="image">
+									<a href="images/Us13.jpg" class="image">
 										<img src="images/Us13.jpg" />
 									</a>
 									<div class="caption">
@@ -290,7 +325,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/04.jpg" class="image">
+									<a href="images/Her19.jpg" class="image">
 										<img src="images/Her19.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -299,7 +334,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/08.jpg" class="image">
+									<a href="images/Her10.jpg" class="image">
 										<img src="images/Her10.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -308,7 +343,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/08.jpg" class="image">
+									<a href="images/Us7.jpg" class="image">
 										<img src="images/Us7.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -317,7 +352,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/08.jpg" class="image">
+									<a href="images/Her15.jpg" class="image">
 										<img src="images/Her15.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -326,7 +361,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/09.jpg" class="image">
+									<a href="images/Her5.jpg" class="image">
 										<img src="images/Her5.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -335,7 +370,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/09.jpg" class="image">
+									<a href="images/Her21.jpg" class="image">
 										<img src="images/Her21.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -344,7 +379,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/09.jpg" class="image">
+									<a href="images/Her23.jpg" class="image">
 										<img src="images/Her23.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -353,7 +388,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/04.jpg" class="image">
+									<a href="images/Us11.jpg" class="image">
 										<img src="images/Us11.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -362,7 +397,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/08.jpg" class="image">
+									<a href="images/Her12.jpg" class="image">
 										<img src="images/Her12.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -371,7 +406,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/10.jpg" class="image">
+									<a href="images/Her6.jpg" class="image">
 										<img src="images/Her6.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -380,7 +415,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/08.jpg" class="image">
+									<a href="images/Her11.jpg" class="image">
 										<img src="images/Her11.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -389,7 +424,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/11.jpg" class="image">
+									<a href="images/Her7.jpg" class="image">
 										<img src="images/Her7.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -398,7 +433,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/04.jpg" class="image">
+									<a href="images/Us12.jpg" class="image">
 										<img src="images/Us12.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -407,7 +442,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/12.jpg" class="image">
+									<a href="images/Her9.jpg" class="image">
 										<img src="images/Her9.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -520,6 +555,10 @@
                 <a href="https://www.youtube.com/watch?v=9VnyhYJui7g&pp=ygUcbWlrZSBzaGlub2RhIHdvcmxkJ3Mgb24gZmlyZQ%3D%3D" target="_blank"><p>💌 Mike Shinoda - World's on Fire 🎵</p></a>
                 <p class="song-note">Why this song? When my world is on fire and it's too much to bear by myself, I remember I have you 💜</p>
             </div>
+			<div class="song">
+                <a href="https://www.youtube.com/watch?v=hfbRtM_CDdc&list=RDhfbRtM_CDdc&start_radio=1&pp=ygUidHdlbnR5IG9uZSBwaWxvdHMgZGF5cyBsaWUgZG9ybWFudKAHAQ%3D%3D" target="_blank"><p>💌 Twenty One Pilots - Days Lie Dormant 🎵</p></a>
+                <p class="song-note">Why this song? It's a song about being apart on how dull life is without you close 💜</p>
+            </div>
         </div>
     </div>
 </section>
@@ -570,6 +609,7 @@
 <section id="poem-of-the-month" class="section">
 	<h2>Poem of the Month</h2>
 	<div class="month-selector">
+		<button onclick="showPoem('poem-october-2025')">October 2025</button>
 		<button onclick="showPoem('poem-september-2025')">September 2025</button>
 		<button onclick="showPoem('poem-august-2025')">August 2025</button>
 	    <button onclick="showPoem('poem-july-2025')">July 2025</button>
@@ -765,6 +805,32 @@
 		<p class="poem-author">"To My Dear and Loving Husband" - By Anne Bradstreet </p>
 		<img src="images/Poem7.jpg" class="poem-image">
 	  </div>
+
+	  <div class="poem-card" id="poem-october-2025">
+		<h3>October 2025</h3>
+		<p class="poem-content">
+		Yes, yours, my love, is the right human face.<br>
+		I in my mind had waited for this long,<br>
+		Seeing the false and searching for the true,<br>
+		<br>
+		Then found you as a traveller finds a place<br>
+		Of welcome suddenly amid the wrong<br>
+		Valleys and rocks and twisting roads. But you,<br>
+		<br>
+		What shall I call you? A fountain in a waste,<br>
+		A well of water in a country dry,<br>
+		Or anything that's honest and good, an eye<br>
+		That makes the whole world seem bright. Your open heart,<br>
+		Simple with giving, gives the primal deed,<br>
+		The first good world, the blossom, the blowing seed,<br>
+		<br>
+		The hearth, the steadfast land, the wandering sea.<br>
+		Not beautiful or rare in every part.<br>
+		But like yourself, as they were meant to be.<br>
+		</p>
+		<p class="poem-author">"The confirmation" - By Edwin Muir </p>
+		<img src="images/Poem8.jpg" class="poem-image">
+	  </div>
   
 
   </section>
@@ -860,8 +926,8 @@
 										<div class="popup-content">
 											<span class="close-btn" onclick="closePopup()">&times;</span>
 											<h2>Lapochka 💜</h2>
-											<p>I love you very very much, and I'm here to support you in anything and everything. We are a team, and we'll face anything that comes together 💜💜💜</p>
-											 <img src="images\Us19.jpg" alt="Sweet moment" class="popup-image">
+											<p>Whatever hardship we face, I want to face it together. Thank you for being in my life, for supporting me, and for sharing this path with me. I love you very very much 💜💜💜</p>
+											 <img src="images\Us22.jpg" alt="Sweet moment" class="popup-image">
 										</div>
 									</div>
 											<hr />
@@ -911,7 +977,7 @@
 					"I'm always happy to see your cute smile! 😊",
 					"You're the most amazing person I know! 🥰",
 					"Every moment with you is the best! 🌟",
-					"You're smart, prrrrretty, and absolutely wonderful! 😍",
+					"You're smart, prrrrretty, and absolutely wonderful! c",
 					"I love to hear you laugh! 🤭",
 					"Being with you makes me the happiest person! 💜",
 					"I'm so lucky to have you! 🍀",
@@ -921,6 +987,8 @@
 					"Your popa is epic, no, legendary!",
 					"I love you and I choose you every single day 💜",
 					"I care about you morning, noon and night 😘",
+					"Better than oxygen is you sitting on my face 😘",
+					"Everything you wear is seeeexy 😍",
 				//];
 			
 				// Function to display a random compliment
